# Tucil2_13523083_13523084

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.bat  build.sh  run.bat  run.sh  vcpkg-configuration.json  vcpkg.json
include/: ErrorMeasure.hpp  GIF.hpp  Image.hpp  QuadTree.hpp
src/: ErrorMeasure.cpp  GIF.cpp  Image.cpp  Quadtree.cpp  main.cpp  test.cpp
src/include/: ErrorMeasure.cpp  ErrorMeasure.hpp  GIF.cpp  GIF.hpp  Image.cpp  Image.hpp  QuadTree.hpp  Quadtree.cpp
